--- a/pc/src/components/layout/index.less
+++ b/pc/src/components/layout/index.less
@@ -61,6 +61,9 @@
   z-index: 1000;
   .ant-menu{
     background: #2D3441;
+    .iconfont{
+      margin-right: 10px;
+    }
     .ant-menu-submenu,.ant-menu-submenu .ant-menu-sub,.ant-menu-item,.ant-menu-item-group-title{
       font-family: PingFangSC-Regular;
       font-size: 14px;
@@ -94,4 +97,5 @@
   min-height: 100%;
   background: #F2F7FE;
   padding: 30px;
+  min-height: 100%;
 }
